# XFtpClient

./: README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xuexiang/xftpclient/: MyApp.kt
app/src/main/java/com/xuexiang/xftpclient/activity/: MainActivity.kt
app/src/main/java/com/xuexiang/xftpclient/fragment/: CFTPFragment.kt  JavaFTPFragment.kt  MainFragment.kt  SettingFragment.kt
app/src/main/java/com/xuexiang/xftpclient/utils/: ToastUtils.kt
app/src/main/res/layout/: fragment_main.xml
app/src/main/res/values/: strings.xml
ftp_lib/: CMakeLists.txt  build.gradle
ftp_lib/src/main/: AndroidManifest.xml
ftp_lib/src/main/cpp/: ftp-lib.cpp
ftp_lib/src/main/cpp/SFML/include/: Network.hpp  System.hpp
ftp_lib/src/main/cpp/SFML/include/Network/: Ftp.hpp  Http.hpp  IpAddress.hpp  Socket.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
ftp_lib/src/main/cpp/SFML/include/System/: Err.hpp  NonCopyable.hpp  String.inl  Time.hpp  Utf.hpp
ftp_lib/src/main/cpp/SFML/src/Network/: Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.hpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
ftp_lib/src/main/cpp/SFML/src/Network/Unix/: SocketImpl.cpp  SocketImpl.hpp
ftp_lib/src/main/cpp/SFML/src/System/: Err.cpp  String.cpp  Time.cpp
ftp_lib/src/main/java/com/xuexiang/ftp/: FtpClient.java
ftp_lib/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
